[package]
name = "modbus_victron"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.53"
tokio = { version = "*", features = ["macros", "rt"] }
tokio-modbus = { version = "*", default-features = false, features = ["tcp"] }